--- a/package.json
+++ b/package.json
@@ -18,12 +18,13 @@
     "@angular/platform-browser": "~13.2.0",
     "@angular/platform-browser-dynamic": "~13.2.0",
     "@angular/router": "~13.2.0",
-    "@types/hammerjs": "^2.0.39",    
+    "@types/hammerjs": "^2.0.39",
     "core-js": "2.6.2",
     "hammerjs": "^2.0.8",
-    "igniteui-angular": "~13.1.0",    
+    "igniteui-angular": "~13.1.0",
     "immediate": "^3.2.3",
     "intl": "^1.2.5",
+    "jquery": "^3.6.0",
     "jszip": "^3.7.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
@@ -34,6 +35,7 @@
     "@angular/cli": "~13.2.6",
     "@angular/compiler-cli": "~13.2.0",
     "@types/jasmine": "~3.10.0",
+    "@types/jquery": "^3.5.14",
     "@types/node": "^12.11.1",
     "jasmine-core": "~4.0.0",
     "karma": "~6.3.0",
