--- a/angular.json
+++ b/angular.json
@@ -32,10 +32,13 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.scss"
+              "src/styles.scss",
+              "node_modules/bootstrap/dist/css/bootstrap.min.css"
             ],
             "scripts": [
-              "node_modules/jquery/dist/jquery.min.js"
+              "node_modules/jquery/dist/jquery.min.js",
+              "node_modules/bootstrap/dist/js/bootstrap.min.js", 
+              "node_modules/popper.js/dist/umd/popper.min.js"
             ]
           },
           "configurations": {
