--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser-dynamic": "~13.2.0",
     "@angular/router": "~13.2.0",
     "@types/hammerjs": "^2.0.39",
+    "bootstrap": "^5.1.3",
     "core-js": "2.6.2",
     "hammerjs": "^2.0.8",
     "igniteui-angular": "~13.1.0",
@@ -26,6 +27,7 @@
     "intl": "^1.2.5",
     "jquery": "^3.6.0",
     "jszip": "^3.7.1",
+    "popper.js": "^1.16.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
